--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About us</title>
+    <title>About</title>
   </head>
   <body>
-    <h1>About</h1>
+    <h1>About us</h1>
     <p>
       This site is a sample project for the <strong>awesome</strong>
       tutorial <a href="https://www.learnenough.com/git-tutorial"><em>Learn Enough™ Git to be Dangerous</em></a>
