--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <h1>hello, world</h1>
     <a href="about.html">About this project</a>
     <a href="https://www.flickr.com/photos/28883788@N04/10097824543"><p>Call me Ishmael.</p></a>
-    <img src="images/breaching_whale.jpg">
+    <img src="images/breaching_whale.jpg" alt="Breaching whale">
   </body>
 </html>
