Adds Placeholder for fix

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <a href="about.html">About this project</a>
     <a href="https://www.flickr.com/photos/28883788@N04/10097824543"><p>Call me Ishmael.</p></a>
     <img src="images/breaching_whale.jpg" alt="Breaching Whale">
+    <!--Add a Fix here-->
   </body>
 </html>
