--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     </p>    
       <a href="https://www.flickr.com/photos/puliarfanita/22959238329">
       <img src="images/polar_bear.jpg" alt="Polar Bear">   
+      <!--Add a Fix here-->
     </a>
     </body>
   </body>
