--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>About</title>
+    <meta charset="utf-8">
   </head>
   <body>
     <h1>About us</h1>
@@ -10,8 +11,7 @@
       tutorial <a href="https://www.learnenough.com/git-tutorial"><em>Learn Enough™ Git to be Dangerous</em></a>
     </p>    
       <a href="https://www.flickr.com/photos/puliarfanita/22959238329">
-      <img src="images/polar_bear.jpg" alt="Polar Bear">   
-      <!--Add a Fix here-->
+      <img src="images/polar_bear.jpg" alt="Polar Bear">         
     </a>
     </body>
   </body>
