--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>A whale of a greeting</title>
+    <meta charset="utf-8">
   </head>
   <body>
     <h1>hello, world</h1>
     <a href="about.html">About this project</a>
     <a href="https://www.flickr.com/photos/28883788@N04/10097824543"><p>Call me Ishmael.</p></a>
     <img src="images/breaching_whale.jpg" alt="Breaching Whale">
-    <!--Add a Fix here-->
   </body>
 </html>
