--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
       <a href="https://www.flickr.com/photos/puliarfanita/22959238329">
       <img src="images/polar_bear.jpg" alt="Polar Bear">         
     </a>
+    <a href="index.html"><p> Back to index</p></a>
     </body>
   </body>
 </html>
